# gratitude_box

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
docker/server/: Dockerfile
migration/src/: lib.rs  m20240125_230737_create_users.rs  m20240125_232114_create_teams.rs
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2024-01-22-222005_create_users/: up.sql
migrations/2024-01-25-152102_create_teams/: down.sql  up.sql
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  parser.pest  parser.rs
slackify/: Cargo.toml
slackify/src/: client.rs  error.rs  lib.rs
slackify/src/client/: chat.rs
src/: cli.rs  error.rs  http.rs  main.rs
src/db/: entities.rs  mod.rs  schema.rs  test_helpers.rs
src/db/entities/: teams.rs  users.rs
src/db/models/: _user.rs  mod.rs  team.rs  user.rs
src/slack/: client.rs  http.rs  messages.rs  mod.rs  responses.rs  signature.rs  verification_middleware.rs
src/slack/client/: chat.rs
src/slack/http/: events.rs
