workspace = { members = ["parser", "migration"] }

[package]
name = "gratitude_box"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.20"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
ring = "0.17"
sea-orm = { version = "0.12", features = ["with-json", "with-chrono", "with-uuid", "sqlx-postgres", "postgres-array", "runtime-tokio-native-tls", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
faster-hex = "0.9"
futures-util = "^0.3"

# Connection pools
deadpool = { version = "0.10", features = ["rt_tokio_1"] }
deadpool-redis = { version = "0.14", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

migration = { path = "migration" }
parser = { path = "parser" }
